# codemap

./: .claudeignore  .envrc  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  Makefile  main.py
.claude/skills/create-pr/: SKILL.md
.claude/skills/test-implementation/: SKILL.md
.claude/skills/test-implementation/evals/: evals.json
.github/workflows/: e2e.yml
crates/ai-client/: Cargo.toml
crates/ai-client/src/: lib.rs
crates/analyzer/: Cargo.toml
crates/analyzer-py/: Cargo.toml
crates/analyzer-py/src/: lib.rs
crates/analyzer-ts/: Cargo.toml
crates/analyzer-ts/src/: lib.rs
crates/analyzer/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: analyze.rs  auth.rs  main.rs  search.rs  symbol.rs  test_support.rs  tour.rs  tree.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  session.rs
frontend/: jest.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: home.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: AIExplanation.test.tsx  AIExplanation.tsx  AnalysisResults.test.tsx  AnalysisResults.tsx  CodeTourInput.test.tsx  CodeTourInput.tsx  CodeTourOverlay.test.tsx  CodeTourOverlay.tsx  Editor.test.ts  Editor.tsx  FileTree.test.tsx  FileTree.tsx  HelpDialog.test.tsx  HelpDialog.tsx  SearchPanel.test.tsx  SearchPanel.tsx
frontend/src/lib/: imports.test.ts  imports.ts
frontend/src/types/: analysis.ts
infra/: dev.tfvars  main.tf  outputs.tf  provider.tf  variables.tf
infra/modules/acm/: main.tf  variables.tf
infra/modules/api-gateway/: main.tf  outputs.tf  variables.tf
infra/modules/cloudfront/: main.tf  outputs.tf  variables.tf
infra/modules/dsql/: main.tf  outputs.tf
infra/modules/dynamodb/: main.tf  outputs.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf
infra/modules/vpc/: main.tf
scripts/: claude_pre_tool_use_guard.py
