[workspace]
resolver = "2"
members = ["crates/core", "crates/api", "crates/analyzer",
           "crates/analyzer-ts", "crates/analyzer-py", "crates/ai-client", "crates/storage"]

[workspace.dependencies]
tokio       = { version = "1.50", features = ["full"] }
axum        = "0.8.8"
lambda_http = "0.14.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
thiserror   = "2.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aws-config  = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.109.0"
aws-sdk-ssm      = "1"
tokio-postgres   = { version = "0.7.16", features = ["with-serde_json-1"] }
aws-sdk-dsql          = "1"
aws-sdk-bedrockruntime = "1"
tokio-postgres-rustls = "0.12"
rustls                = "0.23"
rustls-native-certs   = "0.8"
tree-sitter      = "0.24"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.23.3"
streaming-iterator = "0.1"
uuid             = { version = "1", features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }
tower            = { version = "0.5", features = ["util"] }
tower-http       = { version = "0.6", features = ["cors"] }
base64           = "0.22"
codemap-core        = { path = "crates/core" }
codemap-analyzer    = { path = "crates/analyzer" }
codemap-analyzer-ts = { path = "crates/analyzer-ts" }
codemap-analyzer-py = { path = "crates/analyzer-py" }
codemap-ai-client   = { path = "crates/ai-client" }
codemap-storage     = { path = "crates/storage" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
