[package]
name = "codemap-ai-client"
version = "0.1.0"
edition = "2021"

[dependencies]
codemap-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
tokio = { workspace = true }
