[package]
name = "codemap-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
codemap-core        = { workspace = true }
codemap-storage     = { workspace = true }
codemap-analyzer-ts = { workspace = true }
codemap-ai-client   = { workspace = true }
base64              = { workspace = true }
axum            = { workspace = true }
lambda_http     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
reqwest         = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
aws-config      = { workspace = true }
aws-sdk-ssm     = { workspace = true }
tower-http      = { workspace = true }
rustls          = { workspace = true }

[dev-dependencies]
tower            = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
