[package]
name = "codemap-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
codemap-core = { workspace = true }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-dsql = { workspace = true }
tokio = { workspace = true }
uuid  = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tokio-postgres-rustls = { workspace = true }
tracing = { workspace = true }
